tests/lexer/valid/10_comments.src
// Однострочный комментарий
int x = 42; // комментарий

/* Многострочный
   комментарий */
int y = 99;