tests/lexer/invalid/test_unterminated_comment.src
// Тест 3: Незакрытый комментарий
int x = 42;
/* этот комментарий
   никогда не закрывается
int y = 99;